# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-5e9e80cd66f3e907d18f01f04c4b058e726a72ea78495b2e1e5e03d7be169d03.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230906022412_make_status_not_null_in_subscriptions.sql  20230907224438_create_users_table.sql  20230909171425_seed_user.sql
scripts/: init_db.sh  init_redis.sh
sql_scripts/: create_subscriptions_table.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
