[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Paulo Vítor Sarmento <vsarmento@proton.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
config = "0.13.3"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "sqlite", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.20"
once_cell = "1.18.0"
