[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Paulo Vítor Sarmento <vsarmento@proton.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "query"] }
config = "0.13.3"
fake = "2.8.0"
hyper = "0.14.27"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "migrate"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["request-id", "tracing", "trace", "util"] }
tower-request-id = "0.2.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"
wiremock = "0.5.19"

[dev-dependencies]

linkify = "0.10.0"
serde_json = "1.0.105"
claim = "0.5.0"
reqwest = "0.11.20"
once_cell = "1.18.0"
